WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32756
REGRESSION(52351) Chromium build broken due to compile failure
https://bugs.webkit.org/show_bug.cgi?id=32756
Summary
REGRESSION(52351) Chromium build broken due to compile failure
Peter Kasting
Reported
2009-12-18 16:37:55 PST
REGRESSION(52351) Chromium build broken due to compile failure
http://build.webkit.org/builders/Chromium%20Win%20Release/builds/204/steps/compile-webkit/logs/stdio
Patch coming soon.
Attachments
patch v1
(1.98 KB, patch)
2009-12-18 16:39 PST
,
Peter Kasting
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Kasting
Comment 1
2009-12-18 16:39:21 PST
Created
attachment 45209
[details]
patch v1
Eric Seidel (no email)
Comment 2
2009-12-18 16:42:25 PST
Would be nice to mention the trac link of the breaking revision in the ChangeLog. I should have done that in my recent build fix. LGTM too!
WebKit Commit Bot
Comment 3
2009-12-18 16:47:27 PST
Comment on
attachment 45209
[details]
patch v1 Clearing flags on attachment: 45209 Committed
r52366
: <
http://trac.webkit.org/changeset/52366
>
WebKit Commit Bot
Comment 4
2009-12-18 16:47:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug