2009-12-18  Peter Kasting  <pkasting@google.com>

Reviewed by Adam Barth.

        Chromium build fix
        https://bugs.webkit.org/show_bug.cgi?id=32756

        * public/WebAccessibilityRole.h:
        (WebKit::):
        * src/AssertMatchingEnums.cpp:

Canonical link: https://commits.webkit.org/43779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52366 268f45cc-cd09-0410-ab3c-d52691b4dbfc